--- a/package.json
+++ b/package.json
@@ -17,36 +17,34 @@
   "scripts": {
     "lint": "eslint .",
     "test": "pnpm vitest",
-    "build": "pnpm vite build",
+    "build": "pnpm rollup -c",
     "coverage": "vitest run --coverage"
   },
   "engines": {
     "node": ">=10"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/node": "^22.5.5",
     "@vitest/coverage-v8": "^2.1.1",
     "eslint": "^9.10.0",
     "eslint-plugin-vitest": "^0.5.4",
-    "globals": "^15.9.0",
     "happy-dom": "^15.7.4",
+    "rollup": "^4.22.0",
+    "rollup-plugin-dts": "^6.1.1",
     "signal-timers": "^1.0.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0",
-    "vite": "^5.4.6",
-    "vite-plugin-dts": "^4.2.1",
     "vitest": "^2.1.1"
   },
   "type": "module",
   "files": [
     "dist"
   ],
-  "main": "./dist/signal-transaction.umd.cjs",
-  "module": "./dist/signal-transaction.js",
-  "exports": {
-    ".": {
-      "import": "./dist/signal-transaction.js",
-      "require": "./dist/signal-transaction.umd.cjs"
-    }
-  }
+  "main": "./dist/signal-transaction.cjs",
+  "module": "./dist/signal-transaction.js"
 }
